--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
-<html>
-  <head>
-    <title>Novius OS docs</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8" />
+	
+	<title>Novius OS Documentation</title>  
+	
+	<link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
+  <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
-    <h1>Novius OS docs</h1>
+    <h1><a href="http://www.novius-os.org" target="_blank">Novius OS</a> Documentation</h1>
+    <p>The documentation is at very early stage. Nevertheless, writing the documentation is an on-going process so you can expect frequent, yet incomplete, publications.</p>
+    <p>Do not hesitate to take part in the writing. After all, Novius OS is an open source and collaborative project.</p>
+    <nav>
+      <h2>Contents</h2>    
+      <ul>
+        <li><a href="http://github.com/novius-os/novius-os/wiki">Wiki on GitHub</a></li>
+        <li><a href="glossary.html">Glossary</a></li>
+      </ul>
+    </nav>
+    
   </body>
 </html>
