Provider and namespace not fuzzy

--- a/glossary.html
+++ b/glossary.html
@@ -385,14 +385,14 @@
     <td>&nbsp;</td>
   </tr> 
   <tr>
-    <td class="fuzzy">nos</td>
+    <td>nos</td>
     <td class="n-a">&nbsp;</td>
     <td>&nbsp;</td>
     <td>Namespace and prefix for the core</td>
     <td>&nbsp;</td>
   </tr> 
   <tr>
-    <td class="fuzzy">noviusos</td>
+    <td>noviusos</td>
     <td class="n-a">&nbsp;</td>
     <td>&nbsp;</td>
     <td>Provider of Novius OS applications which are not part of the core</td>
