Adding "Tray" definition

--- a/glossary.html
+++ b/glossary.html
@@ -385,6 +385,13 @@
     <td>&nbsp;</td>
   </tr> 
   <tr>
+    <td>Tray</td>
+    <td class="n-a">&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>Top-right corner of the tab bar used for OS tabs and actions</td>
+    <td>&nbsp;</td>
+  </tr> 
+  <tr>
     <td>nos</td>
     <td class="n-a">&nbsp;</td>
     <td>&nbsp;</td>
