Now with Compass/SASS

--- a/glossary.html
+++ b/glossary.html
@@ -4,10 +4,12 @@
 	<meta charset="utf-8" />
 	
 	<title>Novius OS Documentation - Glossary</title>  
-	
-	<link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
-  <link rel="stylesheet" href="stylesheets/style.css">
-  
+    
+  <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <!--[if IE]>
+  <link href="stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <![endif]-->  
   
 	<script type="text/javascript" src="javascripts/jquery-1.6.2.min.js"></script>  
   <script>
@@ -31,7 +33,7 @@
 </head>
 <body id="no-margin">
 
-<h1><a href="http://www.novius-os.org" target="_blank">Novius OS</a> Documentation - Glossary</h1>
+<h1><a href="index.html">&laquo; Novius OS Documentation</a> - Glossary</h1>
 
 <nav>
 <ul>
