French home + draft applications page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <![endif]-->
   
   </head>
-  <body>
+  <body id="home">
     <h1>Novius OS Documentation</h1>
-    <nav><a href="fr/">Version française</a></nav>
-    <p>Novius OS is a new open-source CMS powered by the latest web technology, such as HTML5 and FuelPHP. Find out more at <a href="http://www.novius-os.org">novius-os.org</a>.</p>
+    <nav><a href="fr/index.html">Version française</a></nav>
+    <p>Novius OS is a new open-source CMS powered by the latest web technology, such as HTML5 and FuelPHP. Find out more at <a href="http://www.novius-os.org/en/">novius-os.org</a>.</p>
     <p>The documentation is at very early stage. Nevertheless, writing the documentation is an on-going process so you can expect frequent, yet incomplete, publications.<br />
     Do not hesitate to take part in the writing. After all, Novius OS is an open source and collaborative project.</p>
     <nav>
@@ -23,7 +23,7 @@
       <ul>
         <li><a href="http://github.com/novius-os/novius-os/wiki">Wiki on GitHub</a></li>
         <li><a href="glossary.html">Glossary</a></li>
-        <li><a href="infographic.html">Understanding the applications</a></li>
+        <li><a href="applications.html">Understanding the applications</a></li>
       </ul>
     </nav>
     
