Everything's an app

--- a/glossary.html
+++ b/glossary.html
@@ -12,7 +12,7 @@
   <![endif]-->  
   
 	<script type="text/javascript" src="javascripts/jquery-1.6.2.min.js"></script>  
-  <script>
+  <script type="text/javascript">
   (function($) {
     $(function() {
       $("#hide-fr").click(function() {
