Applications page finished and translated

--- a/fr/index.html
+++ b/fr/index.html
@@ -23,7 +23,7 @@
       <ul>
         <li><a href="http://github.com/novius-os/novius-os/wiki">Wiki sur GitHub</a></li>
         <li><a href="../glossary.html">Glossaire (en anglais)</a></li>
-        <li><a href="../applications.html">Comprendre les applications (en anglais)</a></li>
+        <li><a href="applications.html">Comprendre les applications</a></li>
       </ul>
     </nav>
     
