--- a/glossary.html
+++ b/glossary.html
@@ -88,7 +88,7 @@
   </tr>
   <tr>
     <td>Role</td>
-    <td>?</td>
+    <td>Rôle</td>
     <td>Group, User type</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
@@ -212,20 +212,20 @@
   </tr>
   <tr>
     <td>Thumbnails</td>
-    <td>?</td>
+    <td>Vignettes</td>
     <td>Icons, Thumbs</td>
     <td rowspan="3" style="vertical-align: middle;">Different types of views</td>
     <td>There are two thumbnails views: Large and small thumbnails</td>
   </tr>
   <tr>
     <td>List</td>
-    <td>?</td>
+    <td>Liste</td>
     <td>Grid, Details</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
     <td>Tree</td>
-    <td>?</td>
+    <td>Arborescence</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
