view translated to french

--- a/glossary.html
+++ b/glossary.html
@@ -205,7 +205,7 @@
   </tr>
   <tr>
     <td id="view">View</td>
-    <td>?</td>
+    <td>Vue</td>
     <td>Display, Layout</td>
     <td>Position of the inspectors and columns</td>
     <td>&nbsp;</td>
