Sharable data, not shared

--- a/glossary.html
+++ b/glossary.html
@@ -325,16 +325,16 @@
     <td>Specific type of enhancers which provide URLs (e.g. blog).</td>
   </tr> 
   <tr>
-    <td id="shared-data">Shared data</td>
+    <td id="sharable-data">Sharable data</td>
     <td class="n-a">&nbsp;</td>
-    <td>Micro-data, Micro-format</td>
+    <td>Micro-data, Micro-format, Shared data, Data Nuggets</td>
     <td>Standardised data (e.g. name, URL, image) released by applications to be used in other applications with data catchers.</td>
   </tr> 
   <tr>
     <td>Data catcher</td>
     <td class="n-a">&nbsp;</td>
     <td>Sharer, Sharing provider, Connector, Micro-data</td>
-    <td>Component of an application. It catches shared data to make use of it (e.g. send a blog post in a newsletter).</td>
+    <td>Component of an application. It catches sharable data to make use of it (e.g. send a blog post in a newsletter).</td>
   </tr> 
   <tr>
     <td>Dispatcher</td>
