Home moved to novius-os.org

--- a/applications.html
+++ b/applications.html
@@ -29,7 +29,7 @@
   </head>
   <body id="applications">
 
-    <h1><a href="index.html">&laquo; Novius OS Documentation</a> - Understanding the applications</h1>
+    <h1><a href="http://www.novius-os.org/en/developpers/Documentation.html">&laquo; Novius OS Documentation</a> - Understanding the applications</h1>
     
     <nav><a href="#" id="hide-details">Hide / show details</a></nav>
     <img src="images/applications-infographic.jpg" alt="Understanding the applications in Novius OS" />
