--- a/glossary.html
+++ b/glossary.html
@@ -29,7 +29,7 @@
 </head>
 <body id="no-margin">
 
-<h1><a href="index.html">&laquo; Novius OS Documentation</a> - Glossary</h1>
+<h1><a href="http://www.novius-os.org/en/developpers/Documentation.html">&laquo; Novius OS Documentation</a> - Glossary</h1>
 
 <nav>
 <ul>
