--- a/glossary.html
+++ b/glossary.html
@@ -340,7 +340,7 @@
     <td>Dispatcher</td>
     <td class="n-a">&nbsp;</td>
     <td>Connector</td>
-    <td>Receives an event from an application and transmit it to the applications which are meant to react.</td>
+    <td>Receives an event from an application and transmits it to the applications which are meant to react.</td>
     <td>&nbsp;</td>
   </tr> 
   <tr>
