Close tab, not remove

--- a/glossary.html
+++ b/glossary.html
@@ -110,7 +110,7 @@
   <tr>
     <td>Template</td>
     <td>Gabarit</td>
-    <td>Theme</td>
+    <td>Theme, Skin</td>
     <td>'Theme' is not used to avoid the confusion with jQuery.</td>
     <td>&nbsp;</td>
   </tr>
@@ -124,8 +124,8 @@
   <tr>
     <td>Close</td>
     <td>Fermer</td>
-    <td>Quit, Exit</td>
-    <td>Applies primarily to an application.</td>
+    <td>Quit, Exit, Remove</td>
+    <td>Applies primarily to tabs.</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
