--- a/glossary.html
+++ b/glossary.html
@@ -372,6 +372,13 @@
     <td>&nbsp;</td>
   </tr> 
   <tr>
+    <td>Renderer</td>
+    <td class="n-a">&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>Re-usable element of the interface. E.g. color picker, page selector.</td>
+    <td>&nbsp;</td>
+  </tr> 
+  <tr>
     <td>Tree grid</td>
     <td class="n-a">&nbsp;</td>
     <td>&nbsp;</td>
