Thou shall not say 'widget'

--- a/glossary.html
+++ b/glossary.html
@@ -374,7 +374,7 @@
   <tr>
     <td>Renderer</td>
     <td class="n-a">&nbsp;</td>
-    <td>&nbsp;</td>
+    <td>Widget</td>
     <td>Re-usable element of the interface. E.g. color picker, page selector.</td>
     <td>&nbsp;</td>
   </tr> 
