Redirection updated (to wiki)

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0;URL='http://www.novius-os.org/en/developpers/Documentation.html'">
+    <meta http-equiv="refresh" content="0;URL='http://github.com/novius-os/novius-os/wiki'">
     
     <title>Novius OS Documentation</title>  
     
     <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />  
   </head>
   <body id="home">
-    <p>Redirecting to <a href="http://www.novius-os.org/en/developpers/Documentation.html">Novius OS website</a>...</p>
+    <p>Redirecting to <a href="http://github.com/novius-os/novius-os/wiki">Novius OS documentation wiki</a>...</p>
   </body>
 </html>
