--- a/glossary.html
+++ b/glossary.html
@@ -27,8 +27,9 @@
   })(jQuery);
   </script>
 </head>
-<body id="no-margin">
+<body id="glossary">
 
+<header>Create Once Publish Everywhere with <a href="http://www.novius-os.org" target="_blank">Novius OS</a>, a Cross-Channel Open Source CMS.</header>
 <h1><a href="http://github.com/novius-os/novius-os/wiki">&laquo; Novius OS Documentation</a> - Glossary</h1>
 
 <nav>
@@ -374,14 +375,15 @@
     <td>Utility view</td>
     <td class="n-a">&nbsp;</td>
     <td>&nbsp;</td>
-    <td><a href="#view">View</a> unavaible to the end users but necessary for the application to run (e.g. <a href="#media-centre">Media Centre</a> in a modal window).</td>
+    <td><a href="#view">View</a> unavaible to end users but needed by an application (e.g. <a href="#media-centre">Media Centre</a> in a modal window).</td>
     <td>&nbsp;</td>
   </tr> 
   <tr>
     <td>Locale</td>
     <td class="n-a">&nbsp;</td>
     <td>&nbsp;</td>    
-    <td rowspan="2">Several <a href="#context">contexts</a> can be managed in Novius OS. A context is either several sites / one locale, one site / several locales or several sites / several locales. A locale is a language/country pair, e.g. en-gb (English, UK) or de-ch (German, Switzerland).</td>
+    <td rowspan="2">Several <a href="#context">contexts</a> can be managed in Novius OS. A context is either several sites / one locale, one site / several locales or several sites / several locales.<br />
+    A locale is a language/country pair, e.g. en-gb (English, UK) or de-ch (German, Switzerland).</td>
     <td>&nbsp;</td>
   </tr> 
   <tr>
@@ -401,7 +403,7 @@
     <td>Twinnable</td>
     <td class="n-a">&nbsp;</td>
     <td>&nbsp;</td>
-    <td>Behaviour: could named "contextable and twinnable". The items belong to a context and can have a twin in another context, e.g. English and Spanish versions of a same page.</td>
+    <td>Behaviour: could named "contextable and twinnable". The items belong to a context and can have a twin in another context. E.g. English and Spanish versions of a same page.</td>
     <td>&nbsp;</td>
   </tr> 
   <tr>
