Link to novius-os.org English version

--- a/glossary.html
+++ b/glossary.html
@@ -29,7 +29,7 @@
 </head>
 <body id="glossary">
 
-<header>Create Once Publish Everywhere with <a href="http://www.novius-os.org" target="_blank">Novius OS</a>, a Cross-Channel Open Source CMS.</header>
+<header>Create Once Publish Everywhere with <a href="http://www.novius-os.org/en/" target="_blank">Novius OS</a>, a Cross-Channel Open Source CMS.</header>
 <h1><a href="http://github.com/novius-os/novius-os/wiki">&laquo; Novius OS Documentation</a> - Glossary</h1>
 
 <nav>
