Copy style guide - Drafts EN/FR

--- a/applications.html
+++ b/applications.html
@@ -30,13 +30,14 @@
   <body id="applications">
 
     <header>Create Once Publish Everywhere with <a href="http://www.novius-os.org/en/" target="_blank">Novius OS</a>, a Cross-Channel Open Source CMS.</header>
-    <h1><a href="http://github.com/novius-os/novius-os/wiki">&laquo; Novius OS Documentation</a> - Understanding the applications</h1>
+    <h1><a href="http://github.com/novius-os/novius-os/wiki" id="back-home">Novius OS Documentation</a> - Understanding the applications</h1>
     
     <nav>
       <ul>
         <li><a href="#" id="hide-details">Hide / show details</a></li>
       </ul>
     </nav>
+    
     <section>
       <img src="images/applications-infographic.jpg" alt="Understanding the applications in Novius OS" />
       <div id="details">
