--- a/glossary.html
+++ b/glossary.html
@@ -30,7 +30,7 @@
 <body id="glossary">
 
 <header>Create Once Publish Everywhere with <a href="http://www.novius-os.org/en/" target="_blank">Novius OS</a>, a Cross-Channel Open Source CMS.</header>
-<h1><a href="http://github.com/novius-os/novius-os/wiki">&laquo; Novius OS Documentation</a> - Glossary</h1>
+<h1><a href="http://github.com/novius-os/novius-os/wiki" id="back-home">Novius OS Documentation</a> - Glossary</h1>
 
 <nav>
 <ul>
