Micro correction VF

--- a/fr/copy-style-guide.html
+++ b/fr/copy-style-guide.html
@@ -36,7 +36,7 @@
       
       <h2>Personnalité, ton à adopter</h2>
       <p>Novius OS est <strong>conçu pour des professionnels</strong>. Ils ne l'utilisent pas pour le plaisir, ils ont un travail à faire. Novius OS doit montrer à ses utilisateurs qu'il partage le même objectif&nbsp;: réaliser le travail demandé le plus efficacement possible. Novius OS adopte ainsi un ton professionnel et qui va à l'essentiel. Novius OS vouvoie l'utilisateur.</p>
-      <p>Ceci étant dit, <strong>utiliser Novius OS n'a pas être ennuyeux</strong> pour autant. Le discours habituel et insipide des logiciels  (ex&nbsp; Veuillez entrer une valeur correcte) est à éviter. Nous ne voulons pas que Novius OS soit perçu comme un logiciel de plus.</p>
+      <p>Ceci étant dit, <strong>utiliser Novius OS n'a pas à être ennuyeux</strong> pour autant. Le discours habituel et insipide des logiciels  (ex&nbsp; Veuillez entrer une valeur correcte) est à éviter. Nous ne voulons pas que Novius OS soit perçu comme un logiciel de plus.</p>
       <p>Novius OS peut faire sourire ses utilisateurs (tout particulièrement s'ils viennent de réaliser une tâche), mais pas rire. Le logiciel n'est pas leur copain. Il s'agit plutôt d'<strong>un collègue de confiance et bien informé</strong> avec qui ils ont plaisir à travailler. Ou plutôt une équipe de collègues, car Novius OS dit &laquo;&nbsp;Nous&nbsp;&raquo; et pas &laquo;&nbsp;Je&nbsp;&raquo;.
       <p>Enfin, même si une partie du public de Novius OS sont des développeurs, les textes ne doivent pas comprendre de jargon. De même, un ton trop familier (ex&nbsp: Désolé mec, ça a planté&nbsp;!) n'est pas bienvenu.</p>
       
